<resources>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="add_counter">Add a counter</string>
    <string name="add_folder">Add a folder</string>
    <string name="add_folder_dialog_message">Entrer the name of the folder</string>
    <string name="add_folder_dialog_title">New folder</string>
    <string name="all_counters">All counters</string>
    <string name="amount">Amount</string>
    <string name="app_name" translatable="false">Counter++</string>
    <string name="application">Application</string>
    <string name="ascending">Ascending</string>
    <string name="cancel">Cancel</string>
    <string name="change_color">Change color</string>
    <string name="color_picker_item_description">Select a color by touching</string>
    <string name="color_picker_message">Select a color</string>
    <string name="color_picker_selected_color">Selected color</string>
    <string name="color_picker_title">Color picker</string>
    <string name="communicate">Communicate</string>
    <string name="contact_us">Contact us</string>
    <string name="count">Count</string>
    <string name="counter">Counter</string>
    <string name="counter_list">List of counters</string>
    <string name="counter_name">Counter name</string>
    <string name="counters">Counters</string>
    <string name="date">Date</string>
    <string name="decreasing">Decreasing</string>
    <string name="decrement">Decrement</string>
    <string name="decrement_statistics">Decrement statistics</string>
    <string name="delete">Delete</string>
    <string name="delete_all_counters">Delete all counters</string>
    <string name="delete_all_counters_warning">This action will delete all counters in this folder. Are you sure?</string>
    <string name="delete_folder_warning">This action will delete this folder and all its counters. Are you sure?</string>
    <string name="descending">Descending</string>
    <string name="direction">Direction</string>
    <string name="duplicate">Duplicate</string>
    <string name="edit">Edit</string>
    <string name="email_warning">Please install an email application to contact us</string>
    <string name="error">Error</string>
    <string name="evaluate">Evaluate</string>
    <string name="export_data_error_message">Error when exporting the data</string>
    <string name="export_data_success_message">The data have been exported to file %s</string>
    <string name="folder">Folder</string>
    <string name="folder_list">List of folders</string>
    <string name="folders">Folders</string>
    <string name="full_screen">Full screen</string>
    <string name="home">Home</string>
    <string name="import_data_dialog_message">Data import in progress</string>
    <string name="import_data_failure_message">Error when importing data</string>
    <string name="import_data_success_message">Data has been successfully imported</string>
    <string name="increasing">Increasing</string>
    <string name="increment">Increment</string>
    <string name="increment_statistics">Increment statistics</string>
    <string name="infinite">Infinite</string>
    <string name="information">Information</string>
    <string name="key_activate_sound" translatable="false">SHARED_PREF_ACTIVATE_SOUND</string>
    <string name="key_activate_vibrator" translatable="false">SHARED_PREF_ACTIVATE_VIBRATOR</string>
    <string name="key_contact_us" translatable="false">SHARED_PREF_CONTACT_US</string>
    <string name="key_count_volume_buttons" translatable="false">SHARED_PREF_VOLUME_BUTTON</string>
    <string name="key_export_data" translatable="false">SHARED_PREF_EXPORT_DATA</string>
    <string name="key_import_data" translatable="false">SHARED_PREF_IMPORT_DATA</string>
    <string name="key_privacy_policy" translatable="false">SHARED_PREF_PRIVACY_POLICY</string>
    <string name="key_rate_app" translatable="false">SHARED_PREF_RATE_APP</string>
    <string name="key_reset_data" translatable="false">SHARED_PREF_RESET_DATA</string>
    <string name="key_screen_always_on" translatable="false">SHARED_PREF_ALWAYS_ON</string>
    <string name="key_see_tutorial" translatable="false">SHARED_PREF_SEE_TUTORIAL</string>
    <string name="key_share_app" translatable="false">SHARED_PREF_SHARE_APP</string>
    <string name="key_theme_and_color" translatable="false">SHARED_PREF_THEME_AND_COLOR</string>
    <string name="last_modified">Last counter modified : %s - %s</string>
    <string name="limit">Limit</string>
    <string name="name">Name</string>
    <string name="name_required_warning">Name is required</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="next">Next</string>
    <string name="no_counters">No counters</string>
    <string name="no_counters_add">Add a counter item +</string>
    <string name="no_folders">No folders</string>
    <string name="no_statistics">No statistics</string>
    <string name="notes">Notes</string>
    <string name="objective">Objective</string>
    <string name="ok">OK</string>
    <string name="period">Period</string>
    <string name="period_one_week">One week</string>
    <string name="period_two_weeks">Two weeks</string>
    <string name="period_one_month">One month</string>
    <string name="period_three_month">Three months</string>
    <string name="period_six_month">Six months</string>
    <string name="pref_header_about">@string/about</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_header_controls">Controls</string>
    <string name="pref_header_display">Display</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rename">Rename</string>
    <string name="reset">Reset</string>
    <string name="reset_all_counters">Reset all counters</string>
    <string name="reset_all_counters_warning">This action will reset all counters in this folder. Are you sure?</string>
    <string name="reset_all_data_success_message">All data have been successfully reset</string>
    <string name="reset_data_warning">This action will delete all data. Are you sure?</string>
    <string name="reset_statistics">Reset statistics</string>
    <string name="select_folder">Select a folder</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="simple_counter">Simple counter</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="statistics">Statistics</string>
    <string name="step">Step</string>
    <string name="storage_permission_warning">To export data permission to write in external storage is required. Please go to settings and enable write in external storage.</string>
    <string name="summary_about">This free app is a non private, non-commercial and leisure project</string>
    <string name="summary_activate_sound">Play sounds on increment, decrement and reset</string>
    <string name="summary_activate_vibrator">Vibrate on increment, decrement and reset</string>
    <string name="summary_contact_us">Any suggestion or bug? Please, let us know!</string>
    <string name="summary_count_volume_buttons">Count when the device\'s volume button is pressed</string>
    <string name="summary_delete_all_counters">Delete all counters, folders and statistics</string>
    <string name="summary_export_data">Export your data to a file. Requires storage permission on Android 6+.</string>
    <string name="summary_import_data">Reset the app with data from exported file. Requires storage permission on Android 6+.</string>
    <string name="summary_rate">Give us your feedback to help improve this app</string>
    <string name="summary_screen_always_on">Prevent device from sleeping while running in the foreground</string>
    <string name="summary_share">Share this app with your friends!</string>
    <string name="summary_theme_and_color">Theme and colors</string>
    <string name="summary_tutorial">See all app\'s features in a quick tutorial</string>
    <string name="title_activate_sound">Activate sounds</string>
    <string name="title_activate_vibrator">Activate vibrator</string>
    <string name="title_contact_us">@string/contact_us</string>
    <string name="title_count_volume_buttons">Use volume keys to count</string>
    <string name="title_delete_all_counters">Delete all counters</string>
    <string name="title_export_data">Export data</string>
    <string name="title_import_data">Import data</string>
    <string name="title_rate">Rate</string>
    <string name="title_screen_always_on">Keep screen on</string>
    <string name="title_share">@string/share</string>
    <string name="title_terms"><![CDATA[Terms & Conditions]]></string>
    <string name="title_theme_and_color">Customize user interface theme and colors</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="title_version">@string/version</string>
    <string name="tutorial_slide_1_description">Use simple infinite counter from home screen</string>
    <string name="tutorial_slide_1_tooltip_1">Tap progress bar to increase counter</string>
    <string name="tutorial_slide_1_tooltip_2">Tap decrease button to decrease counter</string>
    <string name="tutorial_slide_1_tooltip_3">Tap reset icon in navbar to reset counter</string>
    <string name="tutorial_slide_2_description">Create your own counters from counter list screen</string>
    <string name="tutorial_slide_2_tooltip_1">Tap plus button to create counter</string>
    <string name="tutorial_slide_3_description">Create folders to organize your counters from folder list screen</string>
    <string name="tutorial_slide_3_tooltip_1">Tap plus button to create folder</string>
    <string name="tutorial_slide_4_description">Keep track of your activities with advanced statistics</string>
    <string name="tutorial_image">Tutorial\'s image</string>
    <string name="type">Type</string>
    <string name="validate">Validate</string>
    <string name="version">Version</string>
    <string name="warning">Warning</string>
</resources>
