<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_controls">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_activate_sound"
            android:summary="@string/summary_activate_sound"
            android:title="@string/title_activate_sound"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_activate_vibrator"
            android:summary="@string/summary_activate_vibrator"
            android:title="@string/title_activate_vibrator"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_count_volume_buttons"
            android:summary="@string/summary_count_volume_buttons"
            android:title="@string/title_count_volume_buttons"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_display">

        <!--<Preference-->
            <!--android:summary="@string/summary_theme_and_color"-->
            <!--android:key="@string/key_theme_and_color"-->
            <!--android:title="@string/title_theme_and_color"/>-->

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_screen_always_on"
            android:summary="@string/summary_screen_always_on"
            android:title="@string/title_screen_always_on"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_advanced">

        <Preference
            android:summary="@string/summary_delete_all_counters"
            android:key="@string/key_reset_data"
            android:title="@string/title_delete_all_counters"/>

        <Preference
            android:summary="@string/summary_export_data"
            android:key="@string/key_export_data"
            android:title="@string/title_export_data"/>

        <Preference
            android:summary="@string/summary_import_data"
            android:key="@string/key_import_data"
            android:title="@string/title_import_data"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about"/>

        <Preference
            android:summary="@string/versionName"
            android:title="@string/title_version"/>

        <Preference
            android:summary="@string/summary_tutorial"
            android:key="@string/key_see_tutorial"
            android:title="@string/title_tutorial"/>

        <Preference
            android:summary="@string/summary_share"
            android:key="@string/key_share_app"
            android:title="@string/title_share"/>

        <Preference
            android:summary="@string/summary_rate"
            android:key="@string/key_rate_app"
            android:title="@string/title_rate"/>

        <Preference
            android:summary="@string/summary_contact_us"
            android:key="@string/key_contact_us"
            android:title="@string/title_contact_us"/>

        <!-- preference opens url in browser -->

        <Preference android:title="@string/privacy_policy"
                    android:key="@string/key_privacy_policy"/>

        <!--<Preference android:title="@string/title_terms"/>-->

    </PreferenceCategory>
</PreferenceScreen>