<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/list_item_vertical_margin"
    android:paddingLeft="@dimen/list_item_horizontal_margin"
    android:paddingRight="@dimen/list_item_horizontal_margin"
    android:paddingTop="@dimen/list_item_vertical_margin"
    android:background="@color/darkseagreen">

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4"/>

    <TextView
        android:id="@+id/type_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/date_text_view"
        app:layout_constraintRight_toLeftOf="@id/value_text_view"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4"
        tools:ignore="HardcodedText"/>

    <TextView
        android:id="@+id/value_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/type_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.2"
        tools:ignore="HardcodedText"/>

</android.support.constraint.ConstraintLayout>