<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/countLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/count"/>

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/decreaseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/countLayout"
        app:layout_constraintEnd_toStartOf="@id/increaseImage"
        app:srcCompat="@drawable/down_arrow"/>

    <ImageView
        android:id="@+id/increaseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/countLayout"
        app:layout_constraintEnd_toEndOf="@id/titleLayout"
        app:srcCompat="@drawable/up_arrow"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/noteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/countLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawableEnd="@android:drawable/arrow_down_float"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:text="@string/change_color"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/noteLayout"/>

</android.support.constraint.ConstraintLayout>
